--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -1,16 +1,16 @@
 NAME        = moar_brainz
 CC          = c++
-CXXFLAGS    = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS    = -Wall -Wextra -Werror -g -std=c++98
 
 SRC         = main.cpp Zombie.cpp zombieHorde.cpp
 OBJ         = $(SRC:.cpp=.o)
-
+HEADERS     = Zombie.hpp
 all: $(NAME)
 
 $(NAME): $(OBJ)
 	$(CC) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
-%.o: %.cpp
+%.o: %.cpp $(HEADERS)
 	$(CC) $(CXXFLAGS) -c $< -o $@
 
 clean:
@@ -20,5 +20,3 @@ fclean:
 	rm -f $(NAME) $(OBJ)
 
 re: fclean all
-
-.PHONY: all clean fclean re
