--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -4,13 +4,13 @@ CXXFLAGS    = -Wall -Wextra -Werror -std=c++98
 
 SRC         = main.cpp Sed.cpp
 OBJ         = $(SRC:.cpp=.o)
-
+HEADERS     = Sed.hpp
 all: $(NAME)
 
 $(NAME): $(OBJ)
 	$(CC) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
-%.o: %.cpp
+%.o: %.cpp $(HEADERS)
 	$(CC) $(CXXFLAGS) -c $< -o $@
 
 clean:
@@ -20,5 +20,3 @@ fclean:
 	rm -f $(NAME) $(OBJ)
 
 re: fclean all
-
-.PHONY: all clean fclean re
