--- a/cpp01/ex05/Makefile
+++ b/cpp01/ex05/Makefile
@@ -4,13 +4,13 @@ CXXFLAGS    = -Wall -Wextra -Werror -std=c++98
 
 SRC         = main.cpp Harl.cpp
 OBJ         = $(SRC:.cpp=.o)
-
+HEADERS     = Harl.hpp
 all: $(NAME)
 
 $(NAME): $(OBJ)
 	$(CC) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
-%.o: %.cpp
+%.o: %.cpp $(HEADERS)
 	$(CC) $(CXXFLAGS) -c $< -o $@
 
 clean:
