handling some norms stuff

--- a/cpp03/ex03/Makefile
+++ b/cpp03/ex03/Makefile
@@ -1,10 +1,13 @@
 NAME = diamondtrap
 CC = c++
-CFLAGS = -Wall -Wextra -Werror -std=c++98 -Wshadow -Wno-shadow
+CFLAGS = -Wall -Wextra -Werror -std=c++98 
 SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
-
+HEADERS = ClapTrap.hpp  DiamondTrap.hpp  FragTrap.hpp  ScavTrap.hpp
 all: $(NAME)
+	
+%.o: %.cpp $(HEADERS)
+	$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
