--- a/cpp03/ex00/Makefile
+++ b/cpp03/ex00/Makefile
@@ -3,8 +3,11 @@ CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 SRCS = main.cpp ClapTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
-
+HEADERS = ClapTrap.hpp
 all: $(NAME)
+
+%.o: %.cpp $(HEADERS)
+	$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
@@ -12,7 +15,7 @@ $(NAME): $(OBJS)
 clean:
 	rm -f $(OBJS)
 
-fclean:clean
+fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
