--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -3,8 +3,11 @@ CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
-
+HEADERS = ClapTrap.hpp  FragTrap.hpp  ScavTrap.hpp
 all: $(NAME)
+
+%.o: %.cpp $(HEADERS)
+	$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
