--- a/cpp04/ex01/Makefile
+++ b/cpp04/ex01/Makefile
@@ -1,8 +1,9 @@
-NAME        = bsp
+NAME        = Brain
+
 CC          = c++
 CPPFLAGS    = -Wall -Wextra -Werror -std=c++98
-HEADERS     = Fixed.hpp  Point.hpp
-SRCS        = main.cpp Fixed.cpp Point.cpp bsp.cpp
+HEADERS     =  Animal.hpp  Brain.hpp  Cat.hpp	Dog.hpp
+SRCS        = Animal.cpp  Brain.cpp  Cat.cpp	Dog.cpp  main.cpp
 OBJS        = $(SRCS:.cpp=.o)
 
 all: $(NAME)
