--- a/cpp02/ex00/Makefile
+++ b/cpp02/ex00/Makefile
@@ -2,7 +2,7 @@ NAME        = fixed
 
 CC          = c++
 CPPFLAGS    = -Wall -Wextra -Werror -std=c++98
-
+HEADERS     = Fixed.hpp
 SRCS        = main.cpp Fixed.cpp
 OBJS        = $(SRCS:.cpp=.o)
 
@@ -11,7 +11,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CC) $(CPPFLAGS) $(OBJS) -o $(NAME)
 
-%.o: %.cpp
+%.o: %.cpp $(HEADERS)
 	$(CC) $(CPPFLAGS) -c $< -o $@
 
 clean:
