--- a/cpp02/ex02/Makefile
+++ b/cpp02/ex02/Makefile
@@ -1,7 +1,7 @@
 NAME        = fixed
 CC          = c++
 CPPFLAGS    = -Wall -Wextra -Werror -std=c++98
-
+HEADERS     = Fixed.hpp
 SRCS        = main.cpp Fixed.cpp
 OBJS        = $(SRCS:.cpp=.o)
 
@@ -10,7 +10,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CC) $(CPPFLAGS) $(OBJS) -o $(NAME)
 
-%.o: %.cpp
+%.o: %.cpp $(HEADERS)
 	$(CC) $(CPPFLAGS) -c $< -o $@
 
 clean:
