--- a/cpp04/ex02/Makefile
+++ b/cpp04/ex02/Makefile
@@ -1,9 +1,9 @@
-NAME        = 
+NAME        = Abstract
 
 CC          = c++
 CPPFLAGS    = -Wall -Wextra -Werror -std=c++98
-HEADERS     = 
-SRCS        = 
+HEADERS     = AAnimal.hpp  Brain.hpp	Cat.hpp  Dog.hpp
+SRCS        = AAnimal.cpp  Brain.cpp	Cat.cpp  Dog.cpp  main.cpp
 OBJS        = $(SRCS:.cpp=.o)
 
 all: $(NAME)
